--- a/app/src/main/res/layout/fragment_miembros.xml
+++ b/app/src/main/res/layout/fragment_miembros.xml
@@ -2,72 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-</ScrollView>
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="274dp"
-        android:layout_height="53dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="133dp"
-        android:layout_marginBottom="674dp"
-        android:gravity="center_vertical"
-        android:text="Objetivo General"
-        android:textSize="25dp" />
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="125dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="538dp"
-        android:gravity="left"
-        android:text="@string/Ogeneral"></TextView>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            ></com.google.android.material.tabs.TabLayout>
 
-    <TextView
-        android:id="@+id/title2"
-        android:layout_width="274dp"
-        android:layout_height="53dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="214dp"
-        android:layout_marginEnd="129dp"
-        android:layout_marginBottom="464dp"
-        android:gravity="center_vertical"
-        android:text="Objetivo Especifico"
-        android:textSize="25dp" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="201dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="281dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="249dp"
-        android:gravity="left"
-        android:text="@string/Oespecifico"></TextView>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ></androidx.viewpager.widget.ViewPager>
+
 </RelativeLayout>
