--- a/app/src/main/res/layout/fragment_lineasinvestigacion.xml
+++ b/app/src/main/res/layout/fragment_lineasinvestigacion.xml
@@ -6,18 +6,183 @@
     tools:context=".Fragment.LineasinvestigacionFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="192dp"
+
+    <com.codesgood.views.JustifiedTextView
+        android:id="@+id/justifiedTextView"
+        android:layout_width="349dp"
+        android:layout_height="109dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="127dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginBottom="386dp"
+        android:text="@string/intro"></com.codesgood.views.JustifiedTextView>
+
+    <com.uncopt.android.widget.text.justify.JustifiedTextView
+        android:layout_width="wrap_content"
+        android:layout_height="37dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="62dp"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="504dp"
+        android:text="Introducción"
+        android:textSize="30sp"
+        android:textStyle="bold">
+
+    </com.uncopt.android.widget.text.justify.JustifiedTextView>
+
+    <ImageView
+        android:id="@+id/engra"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="186dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginBottom="313dp"
+        android:src="@drawable/engrane" />
+
+    <ImageView
+        android:id="@+id/ojo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="492dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginBottom="7dp"
+        android:src="@drawable/ojo" />
+
+    <TextView
+        android:id="@+id/justifiedTextView7"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="149dp"
+        android:layout_marginTop="522dp"
+        android:layout_marginEnd="-15dp"
+        android:layout_marginBottom="51dp"
+        android:text="Realidad Aumentada"
+        android:textSize="20sp"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/justifiedTextView8"
+        android:layout_width="250dp"
+        android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="558dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="-45dp"
+        android:text="@string/balta"
+        android:textSize="15sp">
+
+    </TextView>
+
+    <ImageView
+        android:id="@+id/foco"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="338dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginBottom="161dp"
+        android:src="@drawable/luz" />
+
+    <com.uncopt.android.widget.text.justify.JustifiedTextView
+        android:id="@+id/justifiedTextView2"
+        android:layout_width="wrap_content"
+        android:layout_height="37dp"
+        android:textStyle="bold"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="204dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="362dp"
+        android:text="Ingeniería de Software"
+        android:textSize="20sp">
+
+    </com.uncopt.android.widget.text.justify.JustifiedTextView>
+
+    <TextView
+        android:id="@+id/justifiedTextView4"
+        android:layout_width="wrap_content"
+        android:layout_height="74dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="245dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="284dp"
-        android:textSize="30dp"
-        android:text="AQUI ESTA LINEAS INVESTIGACION" />
+        android:text="@string/lilia"
+        android:textSize="15sp">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/justifiedTextView6"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="353dp"
+        android:layout_marginEnd="-16dp"
+        android:layout_marginBottom="202dp"
+        android:text="Inteligencia Ambiental y Computación Ubicua"
+        android:textSize="20sp"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/justifiedTextView5"
+        android:layout_width="250dp"
+        android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="408dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="102dp"
+        android:text="@string/vladi"
+        android:textSize="15sp">
+
+    </TextView>
 
 </RelativeLayout>
