--- a/app/src/main/res/layout/fragment_noticias.xml
+++ b/app/src/main/res/layout/fragment_noticias.xml
@@ -4,4 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="334dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="41dp"
+        android:gravity="center"
+        android:textSize="50dp"
+        android:layout_marginBottom="340dp"
+        android:text="NOTCIAS BABY">
+
+    </TextView>
+
 </RelativeLayout>
