--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -21,7 +21,7 @@
         android:id="@+id/txtinvesti"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Indagamos para descubrir y producir soluciones tecnológicas."
+        android:text='"Indagamos para descubrir y producir soluciones tecnológicas."'
         android:textSize="16sp" />
 
     <ImageView
